[gd_scene load_steps=44 format=2]

[ext_resource path="res://scripts/G.level/Level2.gd" type="Script" id=1]
[ext_resource path="res://scenes/Tiles/conveer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Portals/PortalHomie.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Interface.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/PlayerObjects/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Tiles/TileMapSwitching.gd" type="Script" id=13]
[ext_resource path="res://scripts/Tiles/TileMapSwitching2.gd" type="Script" id=14]
[ext_resource path="res://scripts/Tiles/TileMapChanging.gd" type="Script" id=17]
[ext_resource path="res://scripts/Tiles/TileMapChanging2.gd" type="Script" id=18]
[ext_resource path="res://Tiles/World.tres" type="TileSet" id=23]
[ext_resource path="res://sprites/Tiles/poliblock.png" type="Texture" id=24]
[ext_resource path="res://sprites/Tiles/switchblock.png" type="Texture" id=25]
[ext_resource path="res://sprites/Tiles/halfblock.png" type="Texture" id=27]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 8, 4, 8, 4, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 4, 0, 4, 8, 0, 8, 0, 0, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 4, 0, 4, 8, 4, 8, 4, 8, 0, 8, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 4, 0, 4, 0, 0, 8, 0, 8, 4, 0, 4, 0, 4 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 0, 4, 0, 4, 8, 4, 8, 4, 8, 8, 8, 8, 0, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 4, 0, 4, 8, 4, 8, 4, 8, 8, 8, 8, 0, 8, 0, 8 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 4, 0, 4, 0, 8, 0, 8, 0, 8, 8, 8, 8, 4, 8, 4, 8 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 4, 0, 4, 0, 8, 0, 8, 0, 8, 8, 8, 8, 4, 8, 4, 8, 4, 0, 4, 0 )

[sub_resource type="TileSet" id=9]
0/name = "halfblock.png 0"
0/texture = ExtResource( 27 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 1 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "halfblock.png 1"
1/texture = ExtResource( 27 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 8, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 3 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "halfblock.png 2"
2/texture = ExtResource( 27 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 8, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 5 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 6 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "halfblock.png 3"
3/texture = ExtResource( 27 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 8, 8, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 7 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 8 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="TileSet" id=10]
0/name = "halfblock.png 0"
0/texture = ExtResource( 27 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 1 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "halfblock.png 1"
1/texture = ExtResource( 27 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 8, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 3 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "halfblock.png 2"
2/texture = ExtResource( 27 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 8, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 5 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 6 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "halfblock.png 3"
3/texture = ExtResource( 27 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 8, 8, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 7 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 8 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 4, 0, 4, 0, 4, 8, 0, 8, 0, 0, 4, 0, 4, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 0, 0, 4, 0, 4, 8, 0, 8 )

[sub_resource type="OccluderPolygon2D" id=13]
polygon = PoolVector2Array( 0, 0, 0, 0, 8, 0, 8, 4, 0, 4, 0, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 4, 0, 4, 0, 0, 0, 0, 8, 0, 8, 4 )

[sub_resource type="OccluderPolygon2D" id=15]
polygon = PoolVector2Array( 0, 4, 0, 4, 8, 4, 8, 8, 0, 8, 0, 4, 0, 4 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 4, 0, 4, 8, 4, 8, 8, 0, 8 )

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( 4, 0, 4, 0, 8, 0, 8, 8, 4, 8 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 4, 0, 4, 0, 8, 0, 8, 8, 4, 8, 4, 0, 4, 0 )

[sub_resource type="TileSet" id=19]
0/name = "poliblock.png 0"
0/texture = ExtResource( 24 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 11 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 12 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "poliblock.png 1"
1/texture = ExtResource( 24 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 8, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 13 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 14 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "poliblock.png 2"
2/texture = ExtResource( 24 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 8, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 15 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 16 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "poliblock.png 3"
3/texture = ExtResource( 24 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 8, 8, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 17 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 18 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="OccluderPolygon2D" id=20]
polygon = PoolVector2Array( 4, 0, 4, 0, 4, 8, 0, 8, 0, 0, 4, 0, 4, 0, 4, 0 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 0, 0, 4, 0, 4, 8, 0, 8, 0, 0, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=22]
polygon = PoolVector2Array( 0, 0, 0, 0, 8, 0, 8, 4, 0, 4 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 0, 0, 8, 0, 8, 4, 0, 4, 0, 0, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=24]
polygon = PoolVector2Array( 4, 0, 4, 0, 8, 0, 8, 8, 4, 8, 4, 0, 4, 0 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 4, 0, 4, 0, 8, 0, 8, 8, 4, 8 )

[sub_resource type="OccluderPolygon2D" id=26]
polygon = PoolVector2Array( 0, 4, 0, 4, 8, 4, 8, 8, 0, 8, 0, 4, 0, 4 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 4, 0, 4, 8, 4, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=28]
0/name = "switchblock.png 0"
0/texture = ExtResource( 25 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 20 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 21 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "switchblock.png 1"
1/texture = ExtResource( 25 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 8, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 22 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 23 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "switchblock.png 2"
2/texture = ExtResource( 25 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 8, 8, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 24 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 25 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "switchblock.png 3"
3/texture = ExtResource( 25 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 8, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 26 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 27 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="TileSet" id=29]
0/name = "switchblock.png 0"
0/texture = ExtResource( 25 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 20 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 21 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "switchblock.png 1"
1/texture = ExtResource( 25 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 8, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 22 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 23 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "switchblock.png 2"
2/texture = ExtResource( 25 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 8, 8, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 24 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 25 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "switchblock.png 3"
3/texture = ExtResource( 25 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 8, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 26 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 27 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="Environment" id=31]
background_mode = 4
glow_enabled = true
glow_intensity = 0.05
glow_strength = 0.8
glow_blend_mode = 0

[node name="World" type="Node2D"]

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 4, -12 )

[node name="Tiles" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Tiles"]
tile_set = ExtResource( 23 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
collision_layer = 3
collision_mask = 17
format = 1
tile_data = PoolIntArray( -65545, 0, 196608, -65544, 0, 196609, -65543, 0, 196609, -65542, 0, 196609, -65541, 0, 196609, -65540, 0, 196610, -131068, 0, 196608, -131067, 0, 196609, -131066, 0, 196609, -131065, 0, 196609, -131064, 0, 196609, -131063, 0, 196609, -131062, 0, 196609, -131061, 0, 196609, -131060, 0, 196610, 65533, 0, 196608, 65534, 0, 196609, 65535, 0, 196609, 0, 0, 196609, 1, 0, 196609, 2, 0, 196609, 3, 0, 196610 )

[node name="TileMapHalfPlay" type="TileMap" parent="Tiles"]
modulate = Color( 1, 2, 4, 1 )
tile_set = SubResource( 9 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
collision_layer = 4
collision_mask = 17
format = 1

[node name="TileMapHalfGravi" type="TileMap" parent="Tiles"]
modulate = Color( 2, 2, 2, 1 )
z_index = 2
tile_set = SubResource( 10 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
collision_layer = 2
collision_mask = 0
format = 1

[node name="TileMapChanging" type="TileMap" parent="Tiles"]
modulate = Color( 1, 2, 4, 1 )
tile_set = SubResource( 19 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
collision_layer = 4
collision_mask = 17
format = 1
script = ExtResource( 17 )

[node name="Timer" type="Timer" parent="Tiles/TileMapChanging"]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="Tiles/TileMapChanging"]
wait_time = 1.4
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="Tiles/TileMapChanging"]
wait_time = 0.1

[node name="TileMapChanging2" type="TileMap" parent="Tiles"]
modulate = Color( 2, 2, 2, 1 )
tile_set = SubResource( 19 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
collision_layer = 2
collision_mask = 2147483648
format = 1
script = ExtResource( 18 )

[node name="Timer" type="Timer" parent="Tiles/TileMapChanging2"]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="Tiles/TileMapChanging2"]
wait_time = 1.4
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="Tiles/TileMapChanging2"]
wait_time = 0.1

[node name="Locals" type="Node2D" parent="Tiles"]

[node name="TileMapSwitching" type="TileMap" parent="Tiles/Locals"]
modulate = Color( 1, 2, 4, 1 )
tile_set = SubResource( 28 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
collision_layer = 4
collision_mask = 17
format = 1
script = ExtResource( 13 )

[node name="TileMapSwitching2" type="TileMap" parent="Tiles/Locals"]
modulate = Color( 2, 2, 2, 1 )
tile_set = SubResource( 29 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
collision_layer = 2
collision_mask = 2147483648
format = 1
script = ExtResource( 14 )

[node name="1ways" type="Node2D" parent="Tiles"]

[node name="mechanicObjects" type="Node2D" parent="."]

[node name="spheresInv" type="Node2D" parent="mechanicObjects"]

[node name="Checkpoints" type="Node2D" parent="."]

[node name="Lasers" type="Node2D" parent="."]

[node name="Switchers" type="Node2D" parent="."]

[node name="Interface" parent="." instance=ExtResource( 5 )]

[node name="PortalHomie" parent="." instance=ExtResource( 3 )]
position = Vector2( 2, 56 )

[node name="Texts" type="Node2D" parent="."]

[node name="Level2" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 31 )

[node name="marks" type="Node2D" parent="."]

[node name="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 4, -4 )

[node name="StaticBody2D2" parent="." instance=ExtResource( 2 )]
position = Vector2( 12, -4 )

[node name="StaticBody2D3" parent="." instance=ExtResource( 2 )]
position = Vector2( 20, -4 )

[node name="StaticBody2D4" parent="." instance=ExtResource( 2 )]
position = Vector2( 28, -4 )

[node name="StaticBody2D5" parent="." instance=ExtResource( 2 )]
position = Vector2( -4, -4 )

[node name="StaticBody2D6" parent="." instance=ExtResource( 2 )]
position = Vector2( -12, -4 )

[node name="StaticBody2D7" parent="." instance=ExtResource( 2 )]
position = Vector2( -20, -4 )

[connection signal="timeout" from="Tiles/TileMapChanging/Timer" to="Tiles/TileMapChanging" method="_on_Timer_timeout"]
[connection signal="timeout" from="Tiles/TileMapChanging/Timer2" to="Tiles/TileMapChanging" method="_on_Timer2_timeout"]
[connection signal="timeout" from="Tiles/TileMapChanging/Timer3" to="Tiles/TileMapChanging" method="_on_Timer3_timeout"]
[connection signal="timeout" from="Tiles/TileMapChanging2/Timer" to="Tiles/TileMapChanging2" method="_on_Timer_timeout"]
[connection signal="timeout" from="Tiles/TileMapChanging2/Timer2" to="Tiles/TileMapChanging2" method="_on_Timer2_timeout"]
[connection signal="timeout" from="Tiles/TileMapChanging2/Timer3" to="Tiles/TileMapChanging2" method="_on_Timer3_timeout"]
